--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,6 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.4'
     implementation 'org.apache.poi:com.springsource.org.apache.poi:3.0.2.FINAL'
+    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation fileTree(dir: 'C:\\Users\\Rubillex\\AndroidStudioProjects\\Raspisanie\\poi-4.1.2', include: ['*.aar', '*.jar'], exclude: [])
 }
-
-
-
-
