--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.4'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+
+    //ОНА НЕ РАБОТАЕТ С EXCEL 2003
     implementation 'org.apache.poi:poi:4.1.2'
+
 
 }
