--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,10 @@ dependencies {
     implementation 'commons-io:commons-io:2.4'
     implementation 'org.jetbrains:annotations-java5:15.0'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.android.support:support-annotations:28.0.0'
 
+    implementation 'org.json:org.json:2.0'
 
 
 }
