--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -35,6 +36,6 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
 
     implementation 'org.json:org.json:2.0'
-
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
