--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 
     <application
@@ -17,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Light">
         <activity android:name=".FUCKTABLE"></activity>
+        <activity android:name=".Ingeo"></activity>
         <activity android:name=".Ictef"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
