--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
         android:allowBackup="true"
@@ -15,18 +15,22 @@
         android:roundIcon="@drawable/card"
         android:supportsRtl="true"
         android:theme="@style/Light">
-        <activity android:name=".FUCKTABLE"></activity>
-        <activity android:name=".Setting"></activity>
-        <activity android:name=".institut"></activity>
-        <activity android:name=".group_list"></activity>
-        <activity android:name=".maps"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".donate"></activity>
+        <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".auth" />
+        <activity android:name=".app_info" />
+        <activity android:name=".FUCKTABLE" />
+        <activity android:name=".Setting" />
+        <activity android:name=".institut" />
+        <activity android:name=".group_list" />
+        <activity android:name=".maps" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
