--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "dev.prokrostinatorbl.raspisanie"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 15
-        versionName "2.3 Beta 1"
+        versionCode 19
+        versionName "2.4 Beta 5"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,9 +33,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.sothree.slidinguppanel:library:3.4.0'
-    implementation 'com.android.billingclient:billing:3.0.0'
     implementation 'androidx.sqlite:sqlite:2.1.0'
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
+    implementation 'com.android.billingclient:billing:3.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.eightbitlab:blurview:1.6.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -48,8 +54,7 @@ dependencies {
 
     implementation 'org.json:org.json:2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.google.firebase:firebase-config:19.1.4'
     implementation 'com.google.firebase:firebase-invites:17.0.0'
