--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "dev.prokrostinatorbl.raspisanie"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 19
-        versionName "2.4 Beta 5"
+        versionCode 21
+        versionName "2.5.1"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -64,3 +64,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:19.0.2'
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 }
+
